@@ -491,7 +491,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	@Test
 	public void saveGlobalProperty_shouldFailIfDefaultLocaleNotInAllowedLocaleList() {
 
-		Locale defaultLocale = new Locale("fr");
+		Locale defaultLocale = Locale.of("fr");
 
 
 		APIException exception = assertThrows(APIException.class, () -> adminService.saveGlobalProperty(new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_DEFAULT_LOCALE, defaultLocale.toString())));
@@ -594,7 +594,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.authenticate(getTestUserCredentials());
 		
 		APIAuthenticationException exception = assertThrows(APIAuthenticationException.class, () -> adminService.getGlobalProperty(property.getProperty()));
-		assertEquals(exception.getMessage(), String.format("Privileges required: %s", property.getViewPrivilege()));
+		assertEquals(exception.getMessage(), "Privileges required: %s".formatted(property.getViewPrivilege()));
 	}
 	
 	/**
@@ -628,7 +628,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.authenticate(getTestUserCredentials());
 
 		APIException exception = assertThrows(APIException.class, () -> adminService.getGlobalPropertyObject(property.getProperty()));
-		assertEquals(exception.getMessage(), String.format("Privileges required: %s",
+		assertEquals(exception.getMessage(), "Privileges required: %s".formatted(
 			property.getViewPrivilege()));
 	}
 
@@ -665,7 +665,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.authenticate(getTestUserCredentials());
 		
 		APIException exception = assertThrows(APIException.class, () -> adminService.updateGlobalProperty(property.getProperty(), "new-value"));
-		assertEquals(exception.getMessage(), String.format("Privileges required: %s",
+		assertEquals(exception.getMessage(), "Privileges required: %s".formatted(
 			property.getEditPrivilege()));
 	}
 	
@@ -710,7 +710,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.addProxyPrivilege(PrivilegeConstants.MANAGE_GLOBAL_PROPERTIES);
 		
 		APIException exception = assertThrows(APIException.class, () -> adminService.saveGlobalProperty(property));
-		assertEquals(exception.getMessage(), String.format("Privilege: %s, required to edit globalProperty: %s",
+		assertEquals(exception.getMessage(), "Privilege: %s, required to edit globalProperty: %s".formatted(
 			property.getEditPrivilege(), property.getProperty()));
 	}
 	
@@ -729,7 +729,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.addProxyPrivilege(PrivilegeConstants.PURGE_GLOBAL_PROPERTIES);
 		
 		APIException exception = assertThrows(APIException.class, () -> adminService.purgeGlobalProperty(property));
-		assertEquals(exception.getMessage(), String.format("Privilege: %s, required to purge globalProperty: %s",
+		assertEquals(exception.getMessage(), "Privilege: %s, required to purge globalProperty: %s".formatted(
 			property.getDeletePrivilege(), property.getProperty()));
 	}
 	
@@ -868,10 +868,10 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		List<Locale> searchLocales = adminService.getSearchLocales();
 		
 		//then
-		assertTrue(searchLocales.contains(new Locale("en", "US")), "en_US");
-		assertTrue(searchLocales.contains(new Locale("pl")), "pl");
-		assertTrue(searchLocales.contains(new Locale("es")), "es");
-		assertFalse(searchLocales.contains(new Locale("es", "CL")), "es_CL");
+		assertTrue(searchLocales.contains(Locale.of("en", "US")), "en_US");
+		assertTrue(searchLocales.contains(Locale.of("pl")), "pl");
+		assertTrue(searchLocales.contains(Locale.of("es")), "es");
+		assertFalse(searchLocales.contains(Locale.of("es", "CL")), "es_CL");
 	}
 	
 	@Test
@@ -882,14 +882,14 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		User user = Context.getAuthenticatedUser();
 		user.setUserProperty(OpenmrsConstants.USER_PROPERTY_PROFICIENT_LOCALES, "");
 		Context.getUserService().saveUser(user);
-		Context.setLocale(new Locale("en", "GB"));
+		Context.setLocale(Locale.of("en", "GB"));
 		
 		//when
 		List<Locale> searchLocales = adminService.getSearchLocales();
 		
 		//then
 		assertEquals(Context.getLocale(), searchLocales.get(0));
-		assertEquals(new Locale(Context.getLocale().getLanguage()), searchLocales.get(1));
+		assertEquals(Locale.of(Context.getLocale().getLanguage()), searchLocales.get(1));
 	}
 	
 	@Test
@@ -906,9 +906,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		List<Locale> searchLocales = adminService.getSearchLocales();
 		
 		//then
-		assertTrue(searchLocales.contains(new Locale("en", "GB")), "en_GB");
-		assertTrue(searchLocales.contains(new Locale("en", "US")), "en_US");
-		assertFalse(searchLocales.contains(new Locale("pl")), "pl");
+		assertTrue(searchLocales.contains(Locale.of("en", "GB")), "en_GB");
+		assertTrue(searchLocales.contains(Locale.of("en", "US")), "en_US");
+		assertFalse(searchLocales.contains(Locale.of("pl")), "pl");
 	}
 	
 	@Test
@@ -924,10 +924,10 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es, es_CL"));
 		
 		List<Locale> locales = new ArrayList<>();
-		locales.add(new Locale("pl", "PL"));
-		locales.add(new Locale("en"));
-		locales.add(new Locale("es"));
-		locales.add(new Locale("es", "CL"));
+		locales.add(Locale.of("pl", "PL"));
+		locales.add(Locale.of("en"));
+		locales.add(Locale.of("es"));
+		locales.add(Locale.of("es", "CL"));
 		
 		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
 		        .mock(MutableResourceBundleMessageSource.class);
@@ -941,8 +941,8 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
 		
 		assertEquals(2, presentationLocales.size());
-		assertTrue(presentationLocales.contains(new Locale("en")), "en");
-		assertTrue(presentationLocales.contains(new Locale("es", "CL")), "es_CL");
+		assertTrue(presentationLocales.contains(Locale.of("en")), "en");
+		assertTrue(presentationLocales.contains(Locale.of("es", "CL")), "es_CL");
 	}
 	
 	@Test
@@ -952,11 +952,11 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es"));
 		
 		List<Locale> locales = new ArrayList<>();
-		locales.add(new Locale("pl", "PL"));
-		locales.add(new Locale("en"));
-		locales.add(new Locale("es"));
-		locales.add(new Locale("es", "CL"));
-		locales.add(new Locale("es", "SN"));
+		locales.add(Locale.of("pl", "PL"));
+		locales.add(Locale.of("en"));
+		locales.add(Locale.of("es"));
+		locales.add(Locale.of("es", "CL"));
+		locales.add(Locale.of("es", "SN"));
 		
 		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
 		        .mock(MutableResourceBundleMessageSource.class);
@@ -970,9 +970,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
 		
 		assertEquals(3, presentationLocales.size());
-		assertTrue(presentationLocales.contains(new Locale("es", "CL")), "es_CL");
-		assertTrue(presentationLocales.contains(new Locale("es", "SN")), "es_SN");
-		assertTrue(presentationLocales.contains(new Locale("en")), "en");
+		assertTrue(presentationLocales.contains(Locale.of("es", "CL")), "es_CL");
+		assertTrue(presentationLocales.contains(Locale.of("es", "SN")), "es_SN");
+		assertTrue(presentationLocales.contains(Locale.of("en")), "en");
 	}
 	
 	@Test
@@ -982,9 +982,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es_CL"));
 		
 		List<Locale> locales = new ArrayList<>();
-		locales.add(new Locale("pl", "PL"));
-		locales.add(new Locale("en"));
-		locales.add(new Locale("es"));
+		locales.add(Locale.of("pl", "PL"));
+		locales.add(Locale.of("en"));
+		locales.add(Locale.of("es"));
 		
 		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
 		        .mock(MutableResourceBundleMessageSource.class);
@@ -998,8 +998,8 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
 		
 		assertEquals(2, presentationLocales.size());
-		assertTrue(presentationLocales.contains(new Locale("en")), "en");
-		assertTrue(presentationLocales.contains(new Locale("es")), "es");
+		assertTrue(presentationLocales.contains(Locale.of("en")), "en");
+		assertTrue(presentationLocales.contains(Locale.of("es")), "es");
 	}
 	
 	@Test
@@ -1009,9 +1009,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es"));
 		
 		List<Locale> locales = new ArrayList<>();
-		locales.add(new Locale("pl", "PL"));
-		locales.add(new Locale("en"));
-		locales.add(new Locale("es"));
+		locales.add(Locale.of("pl", "PL"));
+		locales.add(Locale.of("en"));
+		locales.add(Locale.of("es"));
 		
 		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
 		        .mock(MutableResourceBundleMessageSource.class);
@@ -1025,8 +1025,8 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
 		
 		assertEquals(2, presentationLocales.size());
-		assertTrue(presentationLocales.contains(new Locale("en")), "en");
-		assertTrue(presentationLocales.contains(new Locale("es")), "es");
+		assertTrue(presentationLocales.contains(Locale.of("en")), "en");
+		assertTrue(presentationLocales.contains(Locale.of("es")), "es");
 	}
 	
 	@Test
@@ -1039,10 +1039,10 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		
 		List<Locale> locales = new ArrayList<>();
 		//Add data in random order and verify that order is maintained in the end by checking against order in global property
-		locales.add(new Locale("pl", "PL"));
-		locales.add(new Locale("es"));
-		locales.add(new Locale("en"));
-		locales.add(new Locale("it", "IT"));
+		locales.add(Locale.of("pl", "PL"));
+		locales.add(Locale.of("es"));
+		locales.add(Locale.of("en"));
+		locales.add(Locale.of("it", "IT"));
 		
 		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
 				.mock(MutableResourceBundleMessageSource.class);
@@ -1056,10 +1056,10 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
 		
 		//Assert Locales in expected order as set by global property
-		assertEquals(new Locale("en"), presentationLocales.get(0));
-		assertEquals(new Locale("es"), presentationLocales.get(1));
-		assertEquals(new Locale("it", "IT"), presentationLocales.get(2));
-		assertEquals(new Locale("pl", "PL"), presentationLocales.get(3));
+		assertEquals(Locale.of("en"), presentationLocales.get(0));
+		assertEquals(Locale.of("es"), presentationLocales.get(1));
+		assertEquals(Locale.of("it", "IT"), presentationLocales.get(2));
+		assertEquals(Locale.of("pl", "PL"), presentationLocales.get(3));
 	}
 
 	@Test
@@ -1079,8 +1079,8 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 
 		//then
 		assertThat(cachedSearchLocales, hasItem(Locale.ENGLISH));
-		assertThat(cachedSearchLocales, hasItem(new Locale("en", "US")));
-		assertThat(cachedSearchLocales, not(hasItem(new Locale("pl"))));
+		assertThat(cachedSearchLocales, hasItem(Locale.of("en", "US")));
+		assertThat(cachedSearchLocales, not(hasItem(Locale.of("pl"))));
 	}
 
 	@Test
@@ -1096,7 +1096,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		//sanity check that cache has been populated
 		adminService.getSearchLocales();
 		List<Locale> cachedSearchLocales = getCachedSearchLocalesForCurrentUser();
-		assertThat(cachedSearchLocales, hasItem(new Locale("en", "US")));
+		assertThat(cachedSearchLocales, hasItem(Locale.of("en", "US")));
 
 		//evict cache
 		adminService.saveGlobalProperty(new GlobalProperty("test", "TEST"));
